@@ -1,6 +1,7 @@
 Revision history for Perl module {{$dist->name}}
 
 {{$NEXT}}
+	Purge guts and use Text::Karma instead
 
 0.003
 	Released: 2011-04-16 01:32:53 UTC
